--- a/projects/beneath-tamarind.html
+++ b/projects/beneath-tamarind.html
@@ -342,9 +342,9 @@
                         </ul>
                     </div>
                     <div class="project-header">
-                        <h2>Beneath the Tamarind Tree</h2>
+                        <h2><i>Beneath the Tamarind Tree</i></h2>
                         <h5>Landing Page Design, Development, Art Direction</h5>
-                        <p class="description">Beneath the Tamarind Tree is a book from Isha Sesay about courage, family, and the lost schoolgirls of Boko Haram. I was tasked to create a single landing page to help create awareness and sales. With a strong photograph from the cover and distinctive typography, I created a branded landing page with a few layout variations with the goal to A/B test conversion rates.  </p>
+                        <p class="description">For this book by Isha Sesay about the lost schoolgirls of Boko Haram, I was tasked with creating a single landing page to help create awareness and generate sales. With a strong photograph from the cover and distinctive typography, I created this branded landing page.  </p>
                     </div>
                 </div>
                 <div class="row">
