--- a/projects/bible-gateway-plus.html
+++ b/projects/bible-gateway-plus.html
@@ -343,7 +343,7 @@
                     <div class="project-header">
                         <h2>Bible Gateway Plus</h2>
                         <h5>UX, Landing Page Design, Art Direction</h5>
-                        <p class="description">The Bible Gateway team approached our team about needing a landing page. They also wanted to use Donald Miller's Story brand framework to drive the content direction. The final artwork was directed at felt needs and tough issues a lot of people face. With a stark and serious tone in the content, the landing page visually elements reflected this. This was a little bit of departure from BG usual brand colors and layout. Overall the campaign created awareness around the Bible Gateway Plus brand and also the site content and benefits. </p>
+                        <p class="description">The Bible Gateway team needed a landing page and wanted to use Donald Miller's Story Brand framework to drive the content direction. The final artwork was directed at the felt needs and tough issues that many people face. While a bit of a departure from the usual colors and layout of the BG brand, the landing page's elements visually reflected the stark and serious tone of the content. Overall the campaign created awareness around not only the Bible Gateway Plus brand, but also the site's content and benefits. </p>
                     </div>
                 </div>
                 <div class="row">
