--- a/projects/bible-gateway-premium.html
+++ b/projects/bible-gateway-premium.html
@@ -344,7 +344,7 @@
                     <div class="project-header">
                         <h2>Bible Gateway Premium</h2>
                         <h5>Website Design, Art Direction</h5>
-                        <p class="description">The idea was born out of a Leader's comment at the companies all-employee meeting. He spoke about how we lacked digital platforms to deliver content. Bible Gateway is one the largest Bible sites in the world, with tens of millions of page views a month. With a strong brand and a engaged audience, we imagined what Bible Gateway Premium could potentially be. Based on a subscription model, the user would have upgraded content and notes based the users role. We did a design pitch to leadership and even though it was never implemented it led to further discussions and collabortion. </p>
+                        <p class="description">This idea was born out of a leader's comment at the Zondervan's all-employee meeting. He pointed out that the company lacked digital platforms to deliver content. Bible Gateway is one of the largest Bible sites in the world, with tens of millions of page views a month. With a strong brand and an engaged audience, I imagined what Bible Gateway Premium could potentially be. Based on a subscription model, the user would have upgraded content and notes depending on the user's role. The design was pitched to leadership, and even though it was never implemented, it led to further discussions and collabortion. </p>
                     </div>
                 </div>
                 <div class="row">
