--- a/projects/holiday-ebook-sale.html
+++ b/projects/holiday-ebook-sale.html
@@ -344,8 +344,7 @@
                     <div class="project-header">
                         <h2>HarperCollins Christian Annual Sale</h2>
                         <h5>Art Direction, Email Design, Web Design, Development</h5>
-                        <p class="description">Our Annual Christmas ebook sale generated six figure sales year over year. This was
-                                a important campaign to our Digital Sales team. I created and led the design for this campaign, which was a Holiday theme. The deliverables were an email and a landing page. An important part of the campaign was also having clear calls to action. I also included a few different design options for A/B testing. </p>
+                        <p class="description">HarperCollins Christian's annual Christmas ebook sale generates six-figure sales each year. This is an important campaign for the digital sales team. I created and led the design for this holiday-themed campaign. An important part of the campaign was having clear calls to action. I created a landing page and an email with a few different design options for A/B testing.</p>
                     </div>
                 </div>
                 <div class="row">
