--- a/projects/idv-cd-packaging.html
+++ b/projects/idv-cd-packaging.html
@@ -336,14 +336,14 @@
                         <ul>
                             <li class="previous"> <a href="old-school.html"
                                     title="Accident Fund Annual Plans"><span class="icon-arrow-left"></span></a></li>
-                            <li class="next"> <a href="study-gateway-app.html" title="IDV CD Packaging"><span
+                            <li class="next"> <a href="study-gateway-app.html" title="IDV DCD Packaging"><span
                                         class="icon-arrow-right"></span></a></li>
                         </ul>
                     </div>
                     <div class="project-header">
-                        <h2>IDV Solutions CD Packaging</h2>
+                        <h2>IDV Solutions DVD Packaging</h2>
                         <h5>Design, Art Direction, Print Production</h5>
-                        <p class="description">After IDV's launch Visual Fusion, we needed a way to promote the server software but also include documentation and a demo video. In collaboration with the sales team, I designed the packaging with the theme of "exploring". Essentially that's the concept we were asking our potentially customers when they received this dvd, to explore and learn about IDV's offerings.  </p>
+                        <p class="description">After IDV's launch of Visual Fusion, the company needed a way to promote the server software while including documentation and a demo video. In collaboration with the sales team, I designed the packaging with the theme of "exploring". With that concept, we asked our potential customers to explore and learn about IDV's offerings when they received this promotional DVD. </p>
                     </div>
                 </div>
                 <div class="row">
