--- a/projects/old-school.html
+++ b/projects/old-school.html
@@ -342,9 +342,9 @@
                         </ul>
                     </div>
                     <div class="project-header">
-                        <h2>Old School Love</h2>
+                        <h2><i>Old School Love</i></h2>
                         <h5> Web Design, Art Direction</h5>
-                        <p class="description">Old School Love is book that was released this year by Run-D.M.C.’s iconic rapper Joseph "Rev Run" Simmons, Justine Simmons. I was tasked to create a branded landing page to help create awareness and also drive sales revenue. I created a couple of versions for A/B testing for different layouts to increase conversion rates. Again with this book, branding and Art Direction needed to be consistent and reflect the books design elements.</p>
+                        <p class="description">For this book by Run-D.M.C.’s rapper Joseph "Rev Run" Simmons and his wife, Justine Simmons, I was tasked with creating a branded landing page to help create awareness and drive sales revenue. I created a couple of different layouts for A/B testing for increased conversion rates. Branding and art direction needed to be consistent and reflect the book's existing design elements.</p>
                     </div>
                 </div>
                 <div class="row">
