--- a/projects/visual-fusion-logo.html
+++ b/projects/visual-fusion-logo.html
@@ -344,7 +344,7 @@
                     <div class="project-header">
                         <h2> Visual Fusion Logo</h2>
                         <h5> Design, Brand</h5>
-                        <p class="description">IDV's flagship server product needed a logo but also fit into the companies already established brand. The software used many different data and these data points that would create a holistic view and displayed on maps via a browser. The conceptual idea was to the idea of gathering data to a single point of reference. </p>
+                        <p class="description">IDV's flagship server product needed a logo and a brand that would fit into the already established company brand. The software's function was to pull many different data sources into a singular view, namely mapping imagery with data sets layered over it.</p>
                     </div>
                 </div>
                 <div class="row" style="padding-bottom: 500px;">
