--- a/projects/zondervan-books.html
+++ b/projects/zondervan-books.html
@@ -343,9 +343,7 @@
                     <div class="project-header">
                         <h2> Zondervan Books Website</h2>
                         <h5> Design</h5>
-                        <p class="description">The Zondervan Trade team wanted to develop their brand and create a web identity.
-                                They wanted to have a website to create a potential landing spot for driving ads but also to create engaging content to connect with their audience. In the initial design, we
-                                a blog site that would present blog content but also using imagery and colors the reflects the contents expansiveness but also how the book could potentially meet felt needs.</p>
+                        <p class="description">The Zondervan trade team wanted to develop their brand and create a web identity. They also wanted to have a website to create a potential landing spot for driving ads and to create engaging content for connecting with their target audience. In the initial design, a blog site was designed with serene colors and imagery from nature, which reflected the expansiveness of the content while remaining approachable. </p>
                     </div>
                 </div>
                 <div class="row">
