--- a/projects/believe.html
+++ b/projects/believe.html
@@ -342,10 +342,9 @@
                         </ul>
                     </div>
                     <div class="project-header">
-                        <h2>Believe</h2>
+                        <h2><i>Believe</i></h2>
                         <h5> Landing Page Design, Art Direction</h5>
-                        <p class="description">Our Direct to Consumer brand, ChurchSource, wanted a landing page design to help better
-                                describe their Believe Church Kit from best-selling author Randy Frazee. The simple design shows what is in the Church Kit via an interactive carousel. In each section a benefit is explained and a clear call to action was included. </p>
+                        <p class="description">Zondervan's direct-to-consumer brand, ChurchSource, wanted a landing page design to help better describe their <i>Believe</i> Church Kit from best-selling author Randy Frazee. The simple design shows what is in the Church Kit via an interactive carousel. In each section a benefit is explained and a clear call to action is included. </p>
                     </div>
                 </div>
                 <div class="row">
