--- a/projects/study-gateway-app.html
+++ b/projects/study-gateway-app.html
@@ -344,7 +344,7 @@
                     <div class="project-header">
                         <h2>Study Gateway App</h2>
                         <h5>UX, Design</h5>
-                        <p class="description">Study Gateway was created to be a online platform to watch Biblical teaching from Thomas Nelson's and Zondervan's authors. In working on this project, I thought the product could be so much more, essentially it could be a Small Groups App. At the time, with the brand only having a logo, I built upon that with a expanded color palette and designed potentially functionality for Study Gateway, which included individual status updates, series progress, reminders and users own personal notes and journaling.</p>
+                        <p class="description">Study Gateway was created to be an online platform for watching biblical content from Thomas Nelson's and Zondervan's authors. Working on the project's initial phase, I thought the product could be much more; it could be expanded to a small groups app. At the time, the brand had only a logo, so I built upon that. I expanded the color palette and designed potential functionality for the app. Some of the features included individual status updates, series progress, reminders, and users' own personal notes and journaling.</p>
                     </div>
                 </div>
                 <div class="row">
