--- a/projects/idv-dvd-packaging.html
+++ b/projects/idv-dvd-packaging.html
@@ -328,28 +328,26 @@
                         <a href="https://www.linkedin.com/in/kjstoneman" target="_blank" class="linkedin">LinkedIn</a>
                         <a href="../docs/Keith-Stoneman-Resume.pdf" class="resume">Resume</a> </nav>
                 </div>
-            </div>
         </header>
         <div id="content">
             <div class="container">
                 <div class="row">
                     <div class="pagination">
                         <ul>
-                            <li class="previous"> <a href="hc-instagram.html"
-                                    title="Bible Gateway Premium"><span class="icon-arrow-left"></span></a></li>
-                            <li class="next"> <a href="idv-dvd-packaging.html" title="Holiday Book Sale"><span
+                            <li class="previous"> <a href="old-school.html"
+                                    title="Accident Fund Annual Plans"><span class="icon-arrow-left"></span></a></li>
+                            <li class="next"> <a href="study-gateway-app.html" title="IDV DCD Packaging"><span
                                         class="icon-arrow-right"></span></a></li>
                         </ul>
                     </div>
                     <div class="project-header">
-                        <h2><i>Old School Love</i></h2>
-                        <h5> Web Design, Art Direction</h5>
-                        <p class="description">For this book by Run-D.M.C.’s rapper Joseph "Rev Run" Simmons and his wife, Justine Simmons, I was tasked with creating a branded landing page to help create awareness and drive sales revenue. I created a couple of different layouts for A/B testing for increased conversion rates. Branding and art direction needed to be consistent and reflect the book's existing design elements.</p>
+                        <h2>IDV Solutions DVD Packaging</h2>
+                        <h5>Design, Art Direction, Print Production</h5>
+                        <p class="description">After IDV's launch of Visual Fusion, the company needed a way to promote the server software while including documentation and a demo video. In collaboration with the sales team, I designed the packaging with the theme of "exploring". With that concept, we asked our potential customers to explore and learn about IDV's offerings when they received this promotional DVD. </p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6"> <img src="../img/projects/old-school/01.jpg" alt="Image 2" class="border"></div>
-                    <div class="col-sm-6"> <img src="../img/projects/old-school/02.jpg" alt="Image 3" class="border"></div>
+                    <div class="col-sm-12"> <img src="../img/projects/idv/01.jpg" alt="Image 1" class="border"></div>
                 </div>
             </div>
         </div>
