--- a/projects/study-gateway-app.html
+++ b/projects/study-gateway-app.html
@@ -335,7 +335,7 @@
                 <div class="row">
                     <div class="pagination">
                         <ul>
-                            <li class="previous"> <a href="idv-cd-packaging.html" title="IDV CD Packaging"><span
+                            <li class="previous"> <a href="idv-dvd-packaging.html" title="IDV CD Packaging"><span
                                         class="icon-arrow-left"></span></a></li>
                             <li class="next"> <a href="jesus-calling-app.html" title="Jesus Calling"><span
                                         class="icon-arrow-right"></span></a></li>
