--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
     <div id="Work" class="section-6">
       <div class="div-portfolio">
         <div class="row">
-          <div class="thumbnail-block"><a href="/projects/zondervan-books.html" class="w-inline-block"><img src="img/thumbnails//zondervan-books.png" width="360" alt="" class="portfolio-thumbnail"></a></div>
-          <div class="thumbnail-block"><a href="/projects/visual-fusion-logo.html" class="w-inline-block"><img src="img/thumbnails//visual-fusion.png" width="280" alt="" class="portfolio-thumbnail"></a></div>
-          <div class="thumbnail-block"><a href="/projects/hc-instagram.html" class="w-inline-block"><img src="img/thumbnails//hc-instagram.jpg" width="280" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/zondervan-books.html" class="w-inline-block"><img src="img/thumbnails/zondervan-books.png" width="360" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/visual-fusion-logo.html" class="w-inline-block"><img src="img/thumbnails/visual-fusion.png" width="280" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/hc-instagram.html" class="w-inline-block"><img src="img/thumbnails/hc-instagram.jpg" width="280" alt="" class="portfolio-thumbnail"></a></div>
         </div>
         <div class="row">
-          <div class="thumbnail-block"><a href="/projects/old-school.html" class="w-inline-block"><img src="img/thumbnails//old-school.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
-          <div class="thumbnail-block"><a href="/projects/idv-cd-packaging.html" class="w-inline-block"><img src="img/thumbnails//cd-packaging.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
-          <div class="thumbnail-block"><a href="/projects/study-gateway-app.html" class="w-inline-block"><img src="img/thumbnails//study-gateway.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/old-school.html" class="w-inline-block"><img src="img/thumbnails/old-school.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/idv-cd-packaging.html" class="w-inline-block"><img src="img/thumbnails/dvd-packaging.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/study-gateway-app.html" class="w-inline-block"><img src="img/thumbnails/study-gateway.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
         </div>
         <div class="row">
-          <div class="thumbnail-block"><a href="/projects/jesus-calling-app.html" class="w-inline-block"><img src="img/thumbnails//jesus-calling.png" width="290" alt="" class="portfolio-thumbnail"></a></div>
-          <div class="thumbnail-block"><a href="/projects/bible-gateway-premium.html" class="w-inline-block"><img src="img/thumbnails//bible-gateway-premium.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
-          <div class="thumbnail-block"><a href="/projects/believe.html" class="w-inline-block"><img src="img/thumbnails//believe.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/jesus-calling-app.html" class="w-inline-block"><img src="img/thumbnails/jesus-calling.png" width="290" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/bible-gateway-premium.html" class="w-inline-block"><img src="img/thumbnails/bible-gateway-premium.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/believe.html" class="w-inline-block"><img src="img/thumbnails/believe.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
         </div>
         <div class="row">
-          <div class="thumbnail-block"><a href="/projects/holiday-ebook-sale.html" class="w-inline-block"><img src="img/thumbnails//holiday-email.png" width="290" alt="" class="portfolio-thumbnail"></a></div>
-          <div class="thumbnail-block"><a href="/projects/beneath-tamarind.html" class="w-inline-block"><img src="img/thumbnails//beneath-tamarind.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
-          <div class="thumbnail-block"><a href="/projects/bible-gateway-plus.html" class="w-inline-block"><img src="img/thumbnails//bible-gateway-plus.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/holiday-ebook-sale.html" class="w-inline-block"><img src="img/thumbnails/holiday-email.png" width="290" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/beneath-tamarind.html" class="w-inline-block"><img src="img/thumbnails/beneath-tamarind.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
+          <div class="thumbnail-block"><a href="/projects/bible-gateway-plus.html" class="w-inline-block"><img src="img/thumbnails/bible-gateway-plus.jpg" width="290" alt="" class="portfolio-thumbnail"></a></div>
         </div>
       </div>
     </div>
