--- a/projects/zondervan-books.html
+++ b/projects/zondervan-books.html
@@ -343,7 +343,7 @@
                     <div class="project-header">
                         <h2> Zondervan Books Website</h2>
                         <h5> Design</h5>
-                        <p class="description">The Zondervan trade team wanted to develop their brand and create a web identity. They also wanted to have a website to create a potential landing spot for driving ads and to create engaging content for connecting with their target audience. In the initial design, a blog site was designed with serene colors and imagery from nature, which reflected the expansiveness of the content while remaining approachable. </p>
+                        <p class="description">The Zondervan trade team wanted to develop their brand and create a web identity. They also wanted to have a website to create a potential landing spot for driving ads and create engaging content to connect with their target audience. In the initial design, a blog site was designed with serene colors and imagery from nature, which reflected the expansiveness of the content while remaining approachable.</p>
                     </div>
                 </div>
                 <div class="row">
