--- a/projects/hc-instagram.html
+++ b/projects/hc-instagram.html
@@ -344,7 +344,7 @@
                     <div class="project-header">
                         <h2>HarperCollins + Instagram</h2>
                         <h5>Ad Design, Art Direction</h5>
-                        <p class="description">With almost 300,000 followers, the HarperCollins Instagram channel is used to promote upcoming author events and book releases. The Instagram card designs below were created with attention to each book's brand, while at the same time promoting the upcoming Instagram event.  </p>
+                        <p class="description">With almost 300,000 followers, the HarperCollins Instagram channel promotes upcoming author events and book releases. The Instagram card designs below were created with attention to each book's brand while at the same time promoting Instagram events.  </p>
                     </div>
                 </div>
                 <div class="row text-center">
