--- a/projects/old-school.html
+++ b/projects/old-school.html
@@ -342,9 +342,9 @@
                         </ul>
                     </div>
                     <div class="project-header">
-                        <h2><i>Old School Love</i></h2>
+                        <h2>Old School Love</h2>
                         <h5> Web Design, Art Direction</h5>
-                        <p class="description">For this book by Run-D.M.C.’s rapper Joseph "Rev Run" Simmons and his wife, Justine Simmons, I was tasked with creating a branded landing page to help create awareness and drive sales revenue. I created a couple of different layouts for A/B testing for increased conversion rates. Branding and art direction needed to be consistent and reflect the book's existing design elements.</p>
+                        <p class="description">For this book by Run-D.M.C.'s rapper Joseph "Rev Run" Simmons and his wife, Justine Simmons, I was tasked with creating a branded landing page to help generate awareness and drive sales revenue. I made a couple of different layouts for A/B testing for increased conversion rates — branding and art direction needed to be consistent and reflect the book's existing design elements.</p>
                     </div>
                 </div>
                 <div class="row">
