--- a/projects/idv-dvd-packaging.html
+++ b/projects/idv-dvd-packaging.html
@@ -343,7 +343,7 @@
                     <div class="project-header">
                         <h2>IDV Solutions DVD Packaging</h2>
                         <h5>Design, Art Direction, Print Production</h5>
-                        <p class="description">After IDV's launch of Visual Fusion, the company needed a way to promote the server software while including documentation and a demo video. In collaboration with the sales team, I designed the packaging with the theme of "exploring". With that concept, we asked our potential customers to explore and learn about IDV's offerings when they received this promotional DVD. </p>
+                        <p class="description">After IDV's Visual Fusion launch, the company needed a way to promote the server software while including documentation and a demo video. In collaboration with the sales team, I designed the packaging with the theme of "exploring." With that concept, we asked our potential customers to explore and learn about IDV's offerings when they received this promotional DVD.</p>
                     </div>
                 </div>
                 <div class="row">
