--- a/projects/study-gateway-app.html
+++ b/projects/study-gateway-app.html
@@ -344,7 +344,7 @@
                     <div class="project-header">
                         <h2>Study Gateway App</h2>
                         <h5>UX, Design</h5>
-                        <p class="description">Study Gateway was created to be an online platform for watching biblical content from Thomas Nelson's and Zondervan's authors. Working on the project's initial phase, I thought the product could be much more; it could be expanded to a small groups app. At the time, the brand had only a logo, so I built upon that. I expanded the color palette and designed potential functionality for the app. Some of the features included individual status updates, series progress, reminders, and users' own personal notes and journaling.</p>
+                        <p class="description">Study Gateway was created to be an online platform for watching biblical content from Thomas Nelson's and Zondervan's authors. Working on the project's initial phase, I thought the product could be much more, expanding the functionality to a small group app. I developed the color palette and designed potential functionality for the app. Some of the features included individual status updates, series progress, reminders, and users' notes and journaling.</p>
                     </div>
                 </div>
                 <div class="row">
