--- a/projects/believe.html
+++ b/projects/believe.html
@@ -344,7 +344,7 @@
                     <div class="project-header">
                         <h2><i>Believe</i></h2>
                         <h5> Landing Page Design, Art Direction</h5>
-                        <p class="description">Zondervan's direct-to-consumer brand, ChurchSource, wanted a landing page design to help better describe their <i>Believe</i> Church Kit from best-selling author Randy Frazee. The simple design shows what is in the Church Kit via an interactive carousel. In each section a benefit is explained and a clear call to action is included. </p>
+                        <p class="description">Zondervan's direct-to-consumer brand, ChurchSource, wanted a landing page design to describe better their Believe Church Kit from best-selling author Randy Frazee. The simple design shows what is in the Church Kit via an interactive carousel. A benefit is explained in each section, and a clear call to action for the end user.</p>
                     </div>
                 </div>
                 <div class="row">
