--- a/projects/holiday-ebook-sale.html
+++ b/projects/holiday-ebook-sale.html
@@ -344,7 +344,7 @@
                     <div class="project-header">
                         <h2>HarperCollins Christian Annual Sale</h2>
                         <h5>Art Direction, Email Design, Web Design, Development</h5>
-                        <p class="description">HarperCollins Christian's annual Christmas ebook sale generates six-figure sales each year. This is an important campaign for the digital sales team. I created and led the design for this holiday-themed campaign. An important part of the campaign was having clear calls to action. I created a landing page and an email with a few different design options for A/B testing.</p>
+                        <p class="description">HarperCollins Christian's annual Christmas ebook sale generates six-figure sales each year. The end of year ebook sale is an essential campaign for the digital sales team. I created and led the design for this holiday-themed campaign. A necessary part of the campaign was having clear calls to action. I made a landing page and an email with a few different design options for A/B testing.</p>
                     </div>
                 </div>
                 <div class="row">
