--- a/projects/beneath-tamarind.html
+++ b/projects/beneath-tamarind.html
@@ -342,7 +342,7 @@
                         </ul>
                     </div>
                     <div class="project-header">
-                        <h2><i>Beneath the Tamarind Tree</i></h2>
+                        <h2>Beneath the Tamarind Tree</h2>
                         <h5>Landing Page Design, Development, Art Direction</h5>
                         <p class="description">For this book by Isha Sesay about the lost schoolgirls of Boko Haram, I was tasked with creating a single landing page to help create awareness and generate sales. With a strong photograph from the cover and distinctive typography, I created this branded landing page.  </p>
                     </div>
