--- a/projects/believe.html
+++ b/projects/believe.html
@@ -342,7 +342,7 @@
                         </ul>
                     </div>
                     <div class="project-header">
-                        <h2><i>Believe</i></h2>
+                        <h2>Believe</h2>
                         <h5> Landing Page Design, Art Direction</h5>
                         <p class="description">Zondervan's direct-to-consumer brand, ChurchSource, wanted a landing page design to describe better their Believe Church Kit from best-selling author Randy Frazee. The simple design shows what is in the Church Kit via an interactive carousel. A benefit is explained in each section, and a clear call to action for the end-user.</p>
                     </div>
