--- a/projects/jesus-calling-app.html
+++ b/projects/jesus-calling-app.html
@@ -342,7 +342,7 @@
                         </ul>
                     </div>
                     <div class="project-header">
-                        <h2><i>Jesus Calling</i> App</h2>
+                        <h2>Jesus Calling App</h2>
                         <h5>UX, App Design</h5>
                         <p class="description">Our team was approached to design and build the next iteration of the Jesus Calling app. A significant requirement was being able to sell the other Jesus Calling books within the app. Another essential requirement was to consistently carry the book brand throughout the app since the app's first iteration was a best-selling app in iTunes.</p>
                     </div>
