--- a/projects/bethany-strategic-priorities.html
+++ b/projects/bethany-strategic-priorities.html
@@ -335,21 +335,24 @@
                 <div class="row">
                     <div class="pagination">
                         <ul>
-                            <li class="previous"> <a href="holiday-ebook-sale.html"
-                                    title="Bible Gateway Premium"><span class="icon-arrow-left"></span></a></li>
-                            <li class="next"> <a href="bethany-strategic-priorities.html" title="Bethany Strateic Priorities"><span
-                                        class="icon-arrow-right"></span></a></li>
+                            <li class="previous"> <a href="beneath-tamarind.html" title="Agency Awards"><span
+                                        class="icon-arrow-left"></span></a></li>
+                            <li class="next"> <span style="color: #777777;" class="icon-arrow-right"></span></li>
                         </ul>
                     </div>
                     <div class="project-header">
-                        <h2>Beneath the Tamarind Tree</h2>
-                        <h5>Landing Page Design, Development, Art Direction</h5>
-                        <p class="description">For this book by Isha Sesay about the lost schoolgirls of Boko Haram, I was tasked with creating a single landing page to help create awareness and generate sales. With a strong photograph from the cover and distinctive typography, I created this branded landing page.  </p>
+                        <h2>Bethany Strategic Priorities</h2>
+                        <h5>Art Direction,Design</h5>
+                        <p class="description">For 2021, Bethany’s Marketing team wanted a visual representation for strategic goals. We tried to communicate our priorities and a reminder to our team when we multiple competing interests. Using the Bethany brand, I created, and art directed this piece for our team. Currently, it has been referenced many times for Bethany’s mission and objectives.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6"> <img src="../img/projects/beneath-tamarind/01.jpg" alt="Image 2" class="border"></div>
-                    <div class="col-sm-6"> <img src="../img/projects/beneath-tamarind/02.jpg" alt="Image 3" class="border"></div>
+                    <div class="col-sm-4"> <img src="../img/projects/bethany-strategic-priorities/01.jpg" alt="Image 8" class="border">
+                    </div>
+                    <div class="col-sm-4"> <img src="../img/projects/bethany-strategic-priorities/02.jpg" alt="Image 9" class="border">
+                    </div>
+                    <div class="col-sm-4"> <img src="../img/projects/bethany-strategic-priorities/03.jpg" alt="Image 10"
+                            class="border"></div>
                 </div>
             </div>
         </div>
